==============================================================
1.0 [2021/12/10 10:00:59]
==============================================================
 - Original release wgblocks (Goffy - Wedega.com)